pod_kube/wk18-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  selector:
  matchLabels:
    app: nginx
  replicas: 5
  template:
    metadata:
    labels:
      app: nginx
    spec:
    containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerport: 80
        volumeMounts:
          - name: nginx-index-file
            mountPath: /usr/share/nginx/html/
  volumes:
  - name: nginx-index-file
